# pdx-syntax

./: .gitignore  README.md  pyproject.toml
src/pdx_syntax/: __init__.py  cli.py  database.py  search.py  seed.py
src/pdx_syntax/data/: __init__.py  initial_data.py
src/pdx_syntax/scrapers/: __init__.py  categories.py  comprehensive.py  digest.py  rate_limiter.py  wiki.py
tests/: __init__.py  test_database.py  test_digest.py  test_search.py
